--- a/index.html
+++ b/index.html
@@ -24,17 +24,36 @@
           <img src="Sun.png" alt="" />
         </div>
         <div class="motivative-text">
-            <p>Raise the bar by completing your goals!</p>
+          <p>Raise the bar by completing your goals!</p>
         </div>
         <div class="progress-bar">
-            <div class="progress">
-                <p>1/3 Completed</p>
-            </div>
+          <div class="progress">
+            <p>1/3 Completed</p>
+          </div>
         </div>
         <div class="error">
-            <p>Please set all the 3 goals!</p>
+          <p>Please set all the 3 goals!</p>
         </div>
-        
+        <div id="input-elements">
+          <div class="input">
+            <input type="checkbox" id="checkbox-input-1" class="checkbox-input" />
+            <input type="text" id="text-input-1" class="text-input" placeholder="Add new goal..." />
+          </div>
+          <div class="input">
+            <input type="checkbox" id="checkbox-input-1" class="checkbox-input" />
+            <input type="text" id="text-input-1" class="text-input" placeholder="Add new goal..." />
+          </div>
+          <div class="input">
+            <input type="checkbox" id="checkbox-input-1" class="checkbox-input" />
+            <input type="text" id="text-input-1" class="text-input" placeholder="Add new goal..." />
+          </div>
+        </div>
+        <div class="quote">
+            <p>"Move one step ahead, today!"</p>
+        </div>
+        <div class="footer">
+            <p>Made with ❤️ by Ankush</p>
+        </div>
       </div>
     </div>
   </body>
